--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT = 3000
-DBcredentials = "s473555:1qazXSW@@tcp(mysql.wmi.amu.edu.pl)/s473555_baza?charset=utf8&parseTime=True&loc=Local"
+DBCREDENTIALS = "s473555:1qazXSW@@tcp(mysql.wmi.amu.edu.pl)/s473555_baza?charset=utf8&parseTime=True&loc=Local"
+SECRET = p9atyvnoiwtlzvgo5t9p2tatv4pcmohunp9ynhbp9ayt
